2005-09-11  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/macui/BookInfoController.rb,
	  lib/alexandria/macui/MainWindow.nib/classes.nib,
	  lib/alexandria/macui/MainWindow.nib/info.nib,
	  lib/alexandria/macui/MainWindow.nib/keyedobjects.nib:

	In the books properties window, disable the previous/next buttons if the 
	given library has only one book.

2005-08-29  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/export_library.rb:

	- Fixed the indentation of the code introduced by the previous commit ;
	- Sorted all exporters by their name ;
	- Changed the BibTex exporter name to 'BibTeX' instead of 'BibTex format'.

2005-08-28  Claudio Belotti  <bel8@lilik.it>

	* lib/alexandria/export_library.rb:

	Added BibTex format exporter.

2005-08-24  Laurent Sansonetti  <lrz@gnome.org>

	* README:

	Fixed indentation.

=== Alexandria 0.6.0 ===

2005-08-24  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/book_providers/bn.rb:

	Fix regression.

	* lib/alexandria/preferences.rb:

	Fix default values handling.

	* README,
	  NEWS:

	Updated for 0.6.0.

2005-08-17  Laurent Sansonetti  <lrz@gnome.org>

	* README:

	Added Ruby/ZOOM in the dependencies list.

2005-08-12  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/ui/main_app.rb:

	- Fixed the filtering actions ;
	- Disable the 'View Online Information' actions if the according providers
	  do not provide a URL for the selected book.

2005-08-03  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/ui/main_app.rb:

	- Stores the books notes in the model, to make filtering faster ;
	- Added a 'Match everything' filtering option.

	* lib/alexandria/ui/new_book_dialog_manual.rb:

	Use the new icon as the default cover image.

	* lib/alexandria/ui/main_app.rb,
	  lib/alexandria/macui/MainController.rb:

	Clarify the GNOME status bar or the Cocoa main window's title by
	displaying "X unrated books" instead of "X books, X unrated" when all the
	books are unrated.

	* lib/alexandria/.cvsignore,